--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,10 +1,4 @@
-<div class="home_vid">
-<video width="320" height="240" autoplay loop>
-  <source src="movie.mp4" type="video/mp4" />
-  <source src="movie.ogg" type="video/ogg" />
-  Your browser does not support the video tag.
-</video>
-</div>
+<div class=home_
 
 <h1 id="login">Log In</h1>
 
